fixing post-navigation to nowrap

--- a/css/style.css
+++ b/css/style.css
@@ -501,7 +501,7 @@ footer.post__element img:first-child {
 }
 .post-navigation span {
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: row nowrap;
     align-items: center;
 }
 .post-navigation span a {
